fix: dish-text out of the box

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .empty {
-    width: 50rem;
+    width: 35%;
 }
 
 
@@ -54,14 +54,17 @@ body {
 .nav-link {
     color: rgb(211, 199, 186);
     text-decoration: none;
-    font-size: 50px;
-    margin: 40px;
+    font-size: 3.125rem;
+    margin: 2.875rem;
 }
 
 .nav {
     width: 65%;
     display: flex;
     flex-direction: row;
+}
+.dish-text{
+    width: 50%;
 }
 
 .prato {
@@ -70,25 +73,22 @@ body {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
-    margin: 50px;
-    width: 800px;
-    height: 300px;
-    margin-left: 20%;
+    margin: 3.125rem;
+    width: 50rem;
+    height: 18.75rem;
     border: #1a1414 solid 5px;
     color: var(--cinzaclaro-base);
+    flex-wrap: wrap;
 }
 
 
 .foto-prato {
-    width: 200px;
-    height: 180px;
-    margin: 30px;
+    width: 12rem;
+    height: 11.25rem;
+    margin: 1.875rem;
     border-radius: 30px;
     border: rgb(0, 0, 0) solid 6px;
 }
-
-
-
 
 .home-container {
     width: 100%;
@@ -109,53 +109,52 @@ body {
 .preco-prato,
 .descricao-prato {
     background-color: var(--marrom-base);
-    margin: 0;
-    margin-top: 30px;
-    margin-right: 20px;
+    margin-top: 1.875rem;
 }
 
 
 .nome-prato {
-    font-size: 40px;
+    font-size: 2.5rem;
 }
 
 
 .preco-prato {
-    font-size: 30px;
+    font-size: 1.875rem;
 }
 
 
 .descricao-prato {
-    font-size: 20px;
+    font-size: 1.875rem;
 }
 
 
 .instagram img {
-    width: 300px;
+    width: 12.5rem;
     height: auto;
-    padding: 0;
+    padding: 3.125rem;
 }
 
 
 .facebook img {
-    width: 200px;
+    width: 12.5rem;
     height: auto;
-    padding: 50px;
+    padding: 3.125rem;
 }
 
 
 .telefone img {
-    width: 200px;
+    width: 12.5rem;
     height: auto;
-    padding: 50px;
+    padding: 3.125rem;
 }
 
 
 .dishes-class {
-
-
     display: flex;
     flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
 }
 
 
@@ -168,7 +167,7 @@ body {
     color: antiquewhite;
     margin-left: 5%;
     width: 90%;
-    height: 190px;
+    height: 11.875rem;
     align-self: center;
 
 
@@ -176,9 +175,9 @@ body {
 
 
 .rodape p {
-    font-size: 20px;
+    font-size: 1.25rem;
     margin-bottom: 0;
-    margin-top: 20px;
+    margin-top: 1.25rem;
 }
 
 
@@ -187,15 +186,19 @@ body {
 .fachada {
     border: #1a1414 solid 8px;
     border-radius: 70px;
-    margin-bottom: 50px;
-
-
+    margin-bottom: 3.125rem;
+    width:50%;
+    height: auto;
 }
 
 
 .footer-strong {
-    font-size: 60px;
-    margin-top: 40px;
+    font-size: 3.75rem;
+    margin-top: 2.5rem;
+}
+.contatos-container{
+    display: flex;
+    flex-direction: row;
 }
 
 .redes {
@@ -204,6 +207,7 @@ body {
     justify-content: center;
     flex-flow: row wrap;
     height: 60%;
+    margin-top: 30rem;
 }
 
 .rede-logo {
@@ -213,18 +217,18 @@ body {
 
 
 .loguinhotop2 {
-    margin-right: 0px;
+    margin-right: 0;
     margin-left: 0;
-    margin-top: 20px;
-    border-radius: 180px;
-    width: 100px;
+    margin-top: 1.25rem;
+    border-radius: 11.25rem;
+    width: 6.25rem;
     border: var(--cinzaclaro-base) solid 5px;
 }
 
 
 .contatos-main {
     width: 100%;
-    height: 30rem;
+    height: 1.875rem;
     display: flex;
     align-items: center;
     align-content: center;
@@ -241,16 +245,16 @@ body {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    width: 550px;
+    width: 34.375;
     border-radius: 30px;
     border: #1a1414 solid 5px;
-    box-shadow: 0px 0px 30px rgb(0, 0, 0);
+    box-shadow: 0px 0px 1.875rem rgb(0, 0, 0);
     height: 20rem;
 }
 
 
 .form-group {
-    margin: 20px;
+    margin: 1.25rem;
 }
 
 
@@ -275,7 +279,7 @@ body {
 
 @media (max-width: 767px) {
     body {
-        background-color: #1a1414;
+
     }
 
     ;
